# course-materials-rag

./: .flake8  .gitignore  CLAUDE.md  check-quality.sh  main.py  package-lock.json  pyproject.toml  query_flow_diagram.md
backend/: ai_generator.py  app.py  backend-tool-refactor.md  models.py  rag_system.py  search_tools.py  session_manager.py  vector_store.py
backend/tests/: __init__.py  conftest.py  test_ai_generator.py  test_api_endpoints.py  test_rag_system.py  test_search_tools.py
frontend/: index.html  script.js  style.css
scripts/: check.py  format.py  lint.py
